--- a/MyMoviesApp/MyMoviesApp/Presentation/HomeMovies/View/Cell/MovieTableViewCell.xib
+++ b/MyMoviesApp/MyMoviesApp/Presentation/HomeMovies/View/Cell/MovieTableViewCell.xib
@@ -10,30 +10,64 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="MovieTableViewCell" rowHeight="117" id="KGk-i7-Jjw" customClass="MovieTableViewCell" customModule="MyMoviesApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="445" height="117"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="MovieTableViewCell" rowHeight="229" id="KGk-i7-Jjw" customClass="MovieTableViewCell" customModule="MyMoviesApp" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="577" height="229"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="445" height="117"/>
+                <rect key="frame" x="0.0" y="0.0" width="577" height="229"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Na3-Oo-keQ">
-                        <rect key="frame" x="201.5" y="48" width="42" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="lmm-Tv-Vc1">
+                        <rect key="frame" x="15" y="15" width="160" height="204"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="160" id="hyc-FJ-DLl"/>
+                        </constraints>
+                    </imageView>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="GIx-z0-ubJ">
+                        <rect key="frame" x="193" y="15" width="372" height="134"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Na3-Oo-keQ">
+                                <rect key="frame" x="0.0" y="0.0" width="372" height="19.5"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7db-U5-2hU">
+                                <rect key="frame" x="0.0" y="39.5" width="372" height="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sinopsis:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eyn-s2-mjX">
+                                <rect key="frame" x="0.0" y="76.5" width="372" height="19.5"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S2Z-Cl-BLk">
+                                <rect key="frame" x="0.0" y="116" width="372" height="18"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                    </stackView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="Na3-Oo-keQ" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="NbL-Z6-cfl"/>
-                    <constraint firstItem="Na3-Oo-keQ" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="uEJ-JO-fMs"/>
+                    <constraint firstItem="lmm-Tv-Vc1" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="15" id="2De-YU-xL8"/>
+                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="GIx-z0-ubJ" secondAttribute="bottom" constant="10" id="FEF-R5-rJa"/>
+                    <constraint firstItem="GIx-z0-ubJ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="15" id="MCo-id-xx4"/>
+                    <constraint firstItem="lmm-Tv-Vc1" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="XJH-JO-aYp"/>
+                    <constraint firstAttribute="trailing" secondItem="GIx-z0-ubJ" secondAttribute="trailing" constant="12" id="mbB-dV-JAJ"/>
+                    <constraint firstItem="GIx-z0-ubJ" firstAttribute="leading" secondItem="lmm-Tv-Vc1" secondAttribute="trailing" constant="18" id="sgo-uF-Vvs"/>
+                    <constraint firstAttribute="bottom" secondItem="lmm-Tv-Vc1" secondAttribute="bottom" constant="10" id="zfY-xm-c0Y"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="title" destination="Na3-Oo-keQ" id="Rpj-0u-j1F"/>
             </connections>
-            <point key="canvasLocation" x="228.2608695652174" y="122.20982142857142"/>
+            <point key="canvasLocation" x="323.91304347826087" y="159.70982142857142"/>
         </tableViewCell>
     </objects>
 </document>
