--- a/MyMoviesApp/MyMoviesApp/Presentation/HomeMovies/View/Cell/MovieTableViewCell.xib
+++ b/MyMoviesApp/MyMoviesApp/Presentation/HomeMovies/View/Cell/MovieTableViewCell.xib
@@ -18,38 +18,58 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="lmm-Tv-Vc1">
-                        <rect key="frame" x="15" y="15" width="160" height="204"/>
+                        <rect key="frame" x="15" y="15" width="120" height="199"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="160" id="hyc-FJ-DLl"/>
+                            <constraint firstAttribute="height" constant="199" id="8Tg-7n-u2G"/>
+                            <constraint firstAttribute="width" constant="120" id="hyc-FJ-DLl"/>
                         </constraints>
                     </imageView>
-                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="GIx-z0-ubJ">
-                        <rect key="frame" x="193" y="15" width="372" height="134"/>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="GIx-z0-ubJ">
+                        <rect key="frame" x="153" y="15" width="412" height="102"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Na3-Oo-keQ">
-                                <rect key="frame" x="0.0" y="0.0" width="372" height="19.5"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7db-U5-2hU">
-                                <rect key="frame" x="0.0" y="39.5" width="372" height="17"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sinopsis:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eyn-s2-mjX">
-                                <rect key="frame" x="0.0" y="76.5" width="372" height="19.5"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S2Z-Cl-BLk">
-                                <rect key="frame" x="0.0" y="116" width="372" height="18"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="ZOx-AI-SaG">
+                                <rect key="frame" x="0.0" y="0.0" width="412" height="46"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Na3-Oo-keQ">
+                                        <rect key="frame" x="0.0" y="0.0" width="412" height="21"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="21" id="bTW-5y-D1K"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7db-U5-2hU">
+                                        <rect key="frame" x="0.0" y="26" width="412" height="20"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="20" id="752-Hb-Id1"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="X0j-NT-lba">
+                                <rect key="frame" x="0.0" y="56" width="412" height="46"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sinopsis:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eyn-s2-mjX">
+                                        <rect key="frame" x="0.0" y="0.0" width="412" height="21"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="21" id="oji-QF-um8"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S2Z-Cl-BLk">
+                                        <rect key="frame" x="0.0" y="26" width="412" height="20"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
                         </subviews>
                     </stackView>
                 </subviews>
@@ -59,13 +79,14 @@
                     <constraint firstItem="GIx-z0-ubJ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="15" id="MCo-id-xx4"/>
                     <constraint firstItem="lmm-Tv-Vc1" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="XJH-JO-aYp"/>
                     <constraint firstAttribute="trailing" secondItem="GIx-z0-ubJ" secondAttribute="trailing" constant="12" id="mbB-dV-JAJ"/>
+                    <constraint firstAttribute="bottom" secondItem="lmm-Tv-Vc1" secondAttribute="bottom" constant="15" id="s04-Cl-tde"/>
                     <constraint firstItem="GIx-z0-ubJ" firstAttribute="leading" secondItem="lmm-Tv-Vc1" secondAttribute="trailing" constant="18" id="sgo-uF-Vvs"/>
-                    <constraint firstAttribute="bottom" secondItem="lmm-Tv-Vc1" secondAttribute="bottom" constant="10" id="zfY-xm-c0Y"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="title" destination="Na3-Oo-keQ" id="Rpj-0u-j1F"/>
+                <outlet property="sinopsis" destination="S2Z-Cl-BLk" id="K7l-Ay-aal"/>
+                <outlet property="title" destination="7db-U5-2hU" id="QFQ-7F-H6j"/>
             </connections>
             <point key="canvasLocation" x="323.91304347826087" y="159.70982142857142"/>
         </tableViewCell>
