--- a/MyMoviesApp/MyMoviesApp/Presentation/HomeMovies/View/Cell/MovieTableViewCell.xib
+++ b/MyMoviesApp/MyMoviesApp/Presentation/HomeMovies/View/Cell/MovieTableViewCell.xib
@@ -10,51 +10,28 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="MovieTableViewCell" rowHeight="229" id="KGk-i7-Jjw" customClass="MovieTableViewCell" customModule="MyMoviesApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="577" height="229"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="MovieTableViewCell" rowHeight="359" id="KGk-i7-Jjw" customClass="MovieTableViewCell" customModule="MyMoviesApp" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="648" height="359"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="577" height="229"/>
+                <rect key="frame" x="0.0" y="0.0" width="648" height="359"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="lmm-Tv-Vc1">
-                        <rect key="frame" x="15" y="15" width="120" height="199"/>
+                        <rect key="frame" x="174" y="76" width="300" height="180"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="199" id="8Tg-7n-u2G"/>
-                            <constraint firstAttribute="width" constant="120" id="hyc-FJ-DLl"/>
+                            <constraint firstAttribute="width" constant="300" id="QPk-z5-vYE"/>
+                            <constraint firstAttribute="height" constant="180" id="eNi-bj-lfV"/>
                         </constraints>
                     </imageView>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="GIx-z0-ubJ">
-                        <rect key="frame" x="153" y="15" width="412" height="102"/>
+                        <rect key="frame" x="15" y="271" width="621" height="73"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="ZOx-AI-SaG">
-                                <rect key="frame" x="0.0" y="0.0" width="412" height="46"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Na3-Oo-keQ">
-                                        <rect key="frame" x="0.0" y="0.0" width="412" height="21"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="21" id="bTW-5y-D1K"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7db-U5-2hU">
-                                        <rect key="frame" x="0.0" y="26" width="412" height="20"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="20" id="752-Hb-Id1"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                            </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="X0j-NT-lba">
-                                <rect key="frame" x="0.0" y="56" width="412" height="46"/>
+                                <rect key="frame" x="0.0" y="0.0" width="621" height="73"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sinopsis:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eyn-s2-mjX">
-                                        <rect key="frame" x="0.0" y="0.0" width="412" height="21"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="621" height="21"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="21" id="oji-QF-um8"/>
                                         </constraints>
@@ -63,7 +40,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S2Z-Cl-BLk">
-                                        <rect key="frame" x="0.0" y="26" width="412" height="20"/>
+                                        <rect key="frame" x="0.0" y="26" width="621" height="47"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -72,23 +49,49 @@
                             </stackView>
                         </subviews>
                     </stackView>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" alignment="center" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="GFE-Uv-OMz">
+                        <rect key="frame" x="20" y="15" width="608" height="46"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TIS-bX-60d">
+                                <rect key="frame" x="284" y="0.0" width="40" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="a0H-iR-RcB"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sSl-A5-OKG">
+                                <rect key="frame" x="286.5" y="26" width="35.5" height="20"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="GF3-uo-CFF"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                    </stackView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="lmm-Tv-Vc1" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="15" id="2De-YU-xL8"/>
-                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="GIx-z0-ubJ" secondAttribute="bottom" constant="10" id="FEF-R5-rJa"/>
-                    <constraint firstItem="GIx-z0-ubJ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="15" id="MCo-id-xx4"/>
-                    <constraint firstItem="lmm-Tv-Vc1" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="XJH-JO-aYp"/>
+                    <constraint firstItem="GFE-Uv-OMz" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="15" id="5TK-EB-dsv"/>
+                    <constraint firstAttribute="bottom" secondItem="GIx-z0-ubJ" secondAttribute="bottom" constant="15" id="FEF-R5-rJa"/>
+                    <constraint firstAttribute="trailing" secondItem="GFE-Uv-OMz" secondAttribute="trailing" constant="20" id="HYi-LS-OIO"/>
+                    <constraint firstItem="lmm-Tv-Vc1" firstAttribute="top" secondItem="GFE-Uv-OMz" secondAttribute="bottom" constant="15" id="KGv-98-wgz"/>
+                    <constraint firstItem="GIx-z0-ubJ" firstAttribute="top" secondItem="lmm-Tv-Vc1" secondAttribute="bottom" constant="15" id="ffx-ay-xaW"/>
                     <constraint firstAttribute="trailing" secondItem="GIx-z0-ubJ" secondAttribute="trailing" constant="12" id="mbB-dV-JAJ"/>
-                    <constraint firstAttribute="bottom" secondItem="lmm-Tv-Vc1" secondAttribute="bottom" constant="15" id="s04-Cl-tde"/>
-                    <constraint firstItem="GIx-z0-ubJ" firstAttribute="leading" secondItem="lmm-Tv-Vc1" secondAttribute="trailing" constant="18" id="sgo-uF-Vvs"/>
+                    <constraint firstItem="GFE-Uv-OMz" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="qsQ-Cy-1eV"/>
+                    <constraint firstItem="GIx-z0-ubJ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="uvo-oj-Nj6"/>
+                    <constraint firstItem="lmm-Tv-Vc1" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="vme-Bb-itL"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="movieImage" destination="lmm-Tv-Vc1" id="sln-QK-hok"/>
                 <outlet property="sinopsis" destination="S2Z-Cl-BLk" id="K7l-Ay-aal"/>
-                <outlet property="title" destination="7db-U5-2hU" id="QFQ-7F-H6j"/>
+                <outlet property="title" destination="sSl-A5-OKG" id="N6Y-0m-ac2"/>
             </connections>
-            <point key="canvasLocation" x="323.91304347826087" y="159.70982142857142"/>
+            <point key="canvasLocation" x="375.36231884057975" y="203.23660714285714"/>
         </tableViewCell>
     </objects>
 </document>
